feat: se corrige problmea sd eendpoint y se crea caso de uso
